Fix project label on mobile

--- a/css/digital-cv.css
+++ b/css/digital-cv.css
@@ -137,7 +137,7 @@ h5 {
   .project-name {
     padding-bottom: 44px;
     font-size: 32px;
-    width: 100%;
+    width: 90%;
   }
 
   p {
